--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,28 +27,31 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^3.1.15
-  cupertino_icons: ^1.0.2
-  firebase_analytics: ^9.1.8
-  firebase_auth: ^3.3.17
-  firebase_core: ^1.16.0
-  firebase_messaging: ^11.4.0
+  cloud_firestore: ^5.6.6  # Updated
+  cupertino_icons: ^1.0.8   # Updated
+  custom_sliding_segmented_control: ^1.8.5
+  firebase_analytics: ^11.4.5  # Updated
+  firebase_auth: ^5.5.2    # Updated
+  firebase_core: ^3.13.0    # Updated
+  firebase_messaging: ^15.2.5  # Updated
   flutter:
     sdk: flutter
-  flutter_datetime_picker: ^1.5.1
-  flutter_launcher_icons: ^0.9.2
-  flutter_local_notifications: ^9.5.3+1
-  flutter_time_picker_spinner: ^2.0.0
-  get: ^4.6.1
-  intl: ^0.17.0
-  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+  flutter_datetime_picker: ^1.5.1 # Updated
+  flutter_launcher_icons: ^0.10.0  # Updated
+  # flutter_local_notifications: ^10.0.0  # Uncomment if needed, updated
+  flutter_speed_dial: ^7.0.0
+  flutter_time_picker_spinner: ^2.0.0 # Updated
+  get: ^4.7.2   # Updated
+  intl: ^0.18.0  # Updated
+  modal_progress_hud_nsn: ^0.5.1  # Updated
 
 flutter_icons:
   android: true
   ios: true
-  image_path: assets/images/logo.png
+  image_path: "assets/images/logo.png"
+
 dev_dependencies:
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.0  # Updated
   flutter_test:
     sdk: flutter
 
